--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "devDependencies": {
     "browser-sync": "^2.14.3",
     "gulp": "^3.9.1",
-    "gulp-minify": "0.0.14",
+    "gulp-cssmin": "^0.1.7",
     "gulp-prettify": "^0.5.0",
     "gulp-pug": "^3.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2"
   },
   "dependencies": {
